--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -14,33 +14,32 @@
     <section class="section 1">
 
         <nav class="side-nav">
+
             <div class="nav-valg ">
                 <a href="/">
-                    <img id="home"  src="pictures/homethree.png">
+                    <img id="home"  src="pictures/vedvesterhavetsogs.png">
                 </a>
             </div>
 
+
             <div class="nav-valg ">
-                <h3>Dataregistrering</h3>
-                <a href="register-car">Registrer ny lejeaftale</a>
-                <a href="registernewcartofleet">Registrer ny bil</a>
-                <a href="registeradvanceagreement">Registrer ny forhåndsaftale</a>
+                <a href="">Den store dag</a>
+
             </div>
 
             <br>
 
             <div class="nav-valg">
-                <h3>Skade & Udbedring</h3>
-                <a href="getreturncarpage">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
-                <a href="carid">Registrer fejl og mangler</a>
-            </div>
+                <a href="">Ønsker</a></div>
 
             <br>
 
             <div class="nav-valg">
-                <h3>Forretningsudviklere</h3>
-                <a href="rented-cars">Vis oversigt over udlejede biler</a>
-                <a href="finance">Vis pris på udlejede biler</a>
+                <a href="">Praktisk</a>
+                     </div>
+
+            <div class="nav-valg">
+                <a href="/addwish">🔒</a>
             </div>
 
         </nav>
@@ -50,7 +49,7 @@
     <section class="board">
 
         <div class="logo">
-            <img id="logo"  src="pictures/Logo-bilabonnement.png">
+            <img id="logo"  src="">
         </div>
 
     </section>
