--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Montserrat, sans-serif;
+    font-family: "Arial Black", serif;
     background-color: #fff;
 }
 
@@ -9,9 +9,10 @@
 }
 
 .side-nav{
+    font-family: "Arial Black", serif;
     width: 300px;
     height: 100%;
-    background-color: #f2f2f2;
+    background-color: darkseagreen;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -20,17 +21,17 @@
 
 }
 .nav-valg{
-    background-color: #f2f2f2;
+    background-color: darkseagreen;
 }
 .nav-valg h3{
-    background-color: #f2f2f2;
+    background-color: darkseagreen;
     padding: 18px;
     margin-bottom: 0;
     font-size: 25px;
 }
 .nav-valg a {
-    background-color: #f2f2f2;
-    color: black;
+    background-color: darkseagreen;
+    color: rgba(30, 67, 253, 0.62);
     text-decoration: none;
     padding: 18px;
     padding-left: 40px;
@@ -39,7 +40,7 @@
 
 }
 .nav-valg a:hover{
-    background-color: #fff;
+    background-color: #b8c9b8;
 
 }
 
